# MinilibX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CI.yml
Shaders/: CMakeLists.txt  imageDraw.fs  imageDraw.metal
Shaders/Metal/: imageDraw.metal
Shaders/OpenGL/: imageDraw_vrtx.glsl
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  pixel_format.c  window.c
exemples/: CMakeLists.txt  put_image_full_window.c  put_image_to_window.c
include/mlx/: mlx.h
src/: Image.cpp  Image.hpp  Ptr.cpp  Ptr.hpp  Vertex.hpp  Window.cpp  Window.hpp  mlx.cpp  mlx_internal.cpp  mlx_internal.hpp
